--- a/SportUp/Info.plist
+++ b/SportUp/Info.plist
@@ -2,24 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSCameraUsageDescription</key>
-	<string>Камера используется для обновления изображения профиля</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Галерея используется для обновления изображения профиля</string>
-	<key>Fabric</key>
-	<dict>
-		<key>APIKey</key>
-		<string>886de8c1d524dbaa9dfdbd457b8c8469ecafdfd4</string>
-		<key>Kits</key>
-		<array>
-			<dict>
-				<key>KitInfo</key>
-				<dict/>
-				<key>KitName</key>
-				<string>Crashlytics</string>
-			</dict>
-		</array>
-	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -34,14 +16,43 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>prefs</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>7</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>886de8c1d524dbaa9dfdbd457b8c8469ecafdfd4</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Камера используется для обновления изображения профиля</string>
 	<key>NSLocationUsageDescription</key>
 	<string>Геопозиция используется для определения вашего города и поиска ближайших игр на карте</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Геопозиция используется для определения вашего города и поиска ближайших игр на карте</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Галерея используется для обновления изображения профиля</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
